--- a/src/styles/app/bootstrap/_text-styles.css
+++ b/src/styles/app/bootstrap/_text-styles.css
@@ -2,85 +2,22 @@
     @mixin blokks-sans 34px;
     line-height: 1.35;
     color: var(--lightest-text-color);
-
-    @media (--small) {
-        font-size: 30px;
-    }
-
-    @media (--default), (--wide) {
-        font-size: responsive 30px 34px;
-        font-range: 480px 1100px;
-    }
-
-    @media (--widest) {
-        font-size: 34px;
-    }
 }
 
 @define-mixin subtitle {
-    @mixin blokks-mono 15px/1.4;
+    @mixin blokks-sans 20px/1.4;
     color: inherit;
     text-decoration: none;
+    color: var(--lightest-text-color);
 }
 
 @define-mixin bodytext {
-    @mixin blokks-sans 18px;
+    @mixin blokks-sans 16px;
     line-height: 1.67;
-    color: inherit;
-
-    @media (--small) {
-        font-size: 16px;
-    }
-
-    @media (--default), (--wide) {
-        font-size: responsive 16px 18px;
-        font-range: 480px 1000px;
-    }
-
-    @media (--widest) {
-        font-size: 18px;
-    }
-
-    a {
-        color: var(--blue-color);
-        text-decoration: none;
-        padding-bottom: 2px;
-        border-bottom: 1px solid;
-    }
-
-    a:hover {
-        color: var(--green-color);
-    }
-}
-
-@define-mixin poster-credits {
-    @mixin blokks-mono 13px/1.6;
-    color: var(--darkest-text-color);
-    text-decoration: none;
-}
-
-@define-mixin navitem {
-    @mixin blokks-mono 13px;
     color: var(--light-text-color);
-    text-decoration: none;
-
-    &:hover {
-        color: var(--lightest-text-color);
-    }
-}
-
-@define-mixin legal {
-    @mixin blokks-mono 13px;
-    color: var(--dark-text-color);
 }
 
 @define-mixin listitem {
     @mixin blokks-mono 15px/1.86;
     color: inherit;
-}
-
-@define-mixin button {
-    @mixin blokks-mono 15px;
-    color: var(--lightest-text-color);
-    text-decoration: none;
 }
