--- a/src/styles/app/_views.css
+++ b/src/styles/app/_views.css
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-    max-width: 800px;
+    max-width: 600px;
 }
 
 h1 {
@@ -19,19 +19,25 @@ h1 {
 
 h2 {
     @mixin subtitle;
-
 }
 
 p {
     @mixin bodytext;
-    color:  var(--light-text-color);
-}
-
-p {
+    color: var(--light-text-color);
     margin: 20px 0;
 }
 
-*, *:after, *:before {
+h2 + p {
+    margin-top: 10px;
+}
+
+a {
+    @mixin link;
+}
+
+*,
+*:after,
+*:before {
     box-sizing: border-box;
 }
 
