--- a/src/styles/app/bootstrap/_fonts.css
+++ b/src/styles/app/bootstrap/_fonts.css
@@ -1,21 +1,21 @@
 @font-face {
-	font-family: 'Blokks Sans Regular';
+	font-family: 'Moderat';
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
-	src: url('https://static.blokks.co/fonts/BlokksSans-Regular.woff') format('woff');
+	src: url('https://static.blokks.co/fonts/Moderat-Regular.woff') format('woff');
 }
 
 @font-face {
-	font-family: 'Blokks Mono Regular';
+	font-family: 'Apercu Mono';
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
-	src: url('https://static.blokks.co/fonts/BlokksMono-Regular.woff') format('woff');
+	src: url('https://static.blokks.co/fonts/Apercu-Mono.woff') format('woff');
 }
 
 @define-mixin blokks-sans $size: 1.4rem {
-    font-family: 'Blokks Sans Regular', sans-serif;
+    font-family: 'Moderat', sans-serif;
     font-size: $size;
     font-weight: 400;
 
